--- a/Styles/style.css
+++ b/Styles/style.css
@@ -158,4 +158,42 @@ font-weight: 700;
     margin: 0 auto 100px;
     gap: 96px;
     align-items: center;
-}                                 
+}
+
+
+
+
+
+footer{
+    color: rgba(255, 255, 255, 1);
+    width: 100%;
+    height: 239px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(10, 8, 38, 1);
+    gap: 6px;
+}
+.f-title{
+color: rgba(255, 255, 255, 1);
+font-family: Poppins;
+font-size: 1.5rem;
+font-weight: 700;
+}
+.f-desc1{
+color: rgba(217, 219, 225, 1);
+font-family: Manrope;
+font-size: .875rem;
+font-weight: 700;
+}
+.f-desc2{
+color: rgba(217, 219, 225, 1);
+font-family: Manrope;
+font-size: .875rem;
+font-weight: 700;
+margin-bottom: 10px;
+}
+.socials{
+    align-items: center;
+    gap: 16px;
+}
