--- a/Styles/style.css
+++ b/Styles/style.css
@@ -201,6 +201,21 @@ font-weight: 700;
     align-items: center;
 }
 
+.featured-title{
+color: rgb(10, 8, 38);
+font-family: Poppins;
+font-size: 2.375rem;
+font-weight: 700;
+margin-bottom: 16px;
+}
+.featured-desc{
+color: rgb(108, 108, 108);
+font-family: Poppins;
+font-size: 1rem;
+font-weight: 700;
+margin-bottom: 16px;
+}
+
                                   /* footer's Style  */
 
 footer{
