banners photo resized

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -285,6 +285,9 @@ margin-bottom: 10px;
     .nav-links{
         display: none;
     }
+    #search, #cart{
+        display: none;
+    }
     .hamburger-icon{
         display: block;
     }
@@ -329,12 +332,24 @@ margin-bottom: 10px;
         z-index: 1;
     }
     .banner{
-        flex-direction: column;
+        flex-direction: column-reverse;
         width: 90%;
-        margin: 0 auto ;
+        gap:60px ;
+        margin: 0 auto;
     }
     .banner-title, .banner-desc{
         width: 100%;
         height: auto;
+    }
+    .banner-img{
+        width: 257px;
+        height: 257px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+    }
+    .banner-img img{
+        width: 238px;
+        height: 224px;
     }
 }
