--- a/Styles/style.css
+++ b/Styles/style.css
@@ -275,7 +275,7 @@ margin-bottom: 10px;
 
 @media screen and (max-width:576px){
     .wrapper{
-        width: 100vh;
+        width: 100vw;
     }
     .nav-bar{
         width: 95%;
