--- a/Styles/style.css
+++ b/Styles/style.css
@@ -375,7 +375,7 @@ margin-bottom: 10px;
     }
     .product-cards{
         grid-template-columns: repeat(1, 1fr);
-        gap: 20px;
+        row-gap: 20px;
         margin-bottom: 30px;
     }
 
